[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
clap = { version = "4.4.11", features = ["derive"] }
image = { version = "0.24.7" }
# web api dependencies: axum, tower, tokio
axum = { version = "0.7.3" }
tokio = { version = "1.13.0", features = ["full"] }
tower = { version = "0.4.12" }

reqwest = { version = "0.11.6", features = ["json"] }

tokio-test = { version = "0.4.3" }
rayon = { version = "1.5.1" }